TAG: homologyload-tr12044-BP
DATE: 07/01/2016
STAFF: sc
1) Branch Point tag TR12044 - New HGNC Biomart

TAG: homologyload-6-0-4-1
DATE: 04/28/2016
STAFF: kstone
1) Disabling Sybase translators

TAG: homologyload-6-0-3-1
DATE: 04/13/2016
STAFF: dbm
CHANGES: TR12322
1) zfinload.config.default: Input file name changed (xpat.txt -> xpat_fish.txt)

TAG: homologyload-6-0-1-1
DATE: 11/30/2015
STAFF: dbm
CHANGES: TR11904 & TR12199
1) common.config.default: Clean up log mailing
2) homologeneload.config.default: Clean up log mailing
3) homologyload.config.default: Clean up log mailing

TAG: homologyload-6-0-0-1
DATE: 07/24/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG: homologyload-trunk-1
DATE: 07/16/2015
STAFF: sc
CHANGES:
1) rm db.setAutoTranslate() and db.setAutoTranslateBE() from all python scripts
2) # --> temp:
    homologeneload.py
    homologyload.py
    preprocessHomologene.py
    
TAG: homologyload-tr11750-MP
DATE: 07/01/2015
STAFF: lec
CHANGES: merge  point tag for TR11750 Infrastructure II

TAG: homologyload-tr11750-1
DATE: 04/28/2015
STAFF: sc
CHANGES: copied *.postgres to *, rm *.postgres
specifically:
cp homologeneload.py.postgres homologeneload.py
cp homologyload.py.postgres homologyload.py
cp homologyload.sh.postgres homologyload.sh
cp preprocessHomologene.py.postgres preprocessHomologene.py
rm homologeneload.py.postgres homologyload.py.postgres homologyload.sh.postgres preprocessHomologene.py.postgres

TAG: homologyload-tr11750-BP
DATE: 04/28/2015
STAFF: sc
CHANGES: Branch point tag for TR11750 Infrastructure II

TAG: homologyload-5-2-2-1
DATE: 04/24/2015
STAFF: sc
CHANGES: TR11886 - merge to trunk

TAG: homologyload-tr11886-26
DATE:04/14/2015
STAFF: sc
CHANGES: US107 - test homologyload against postgres/new linux
* added postgres versions of four scripts

TAG: homologyload-tr11886-25
DATE:04/14/2015
STAFF: sc
CHANGES:
1) homologyload.py - sybase/pg testing revealed leading space in MRK_ClusterMember.bcp