@@ -160,7 +160,7 @@ def init():
 	and a._LogicalDB_key = 55
 	and a.preferred = 1
 	and a._Object_key = m._Marker_key
-	and m._Marker_Status_key in (1,3)
+	and m._Marker_Status_key = 1
 	and m._Organism_key = 63''', 'auto')
     #
     # create Chicken egID to marker lookup from database
@@ -176,7 +176,7 @@ def init():
 	    where a._MGIType_key = 2
 	    and a._LogicalDB_key = 55
 	    and a._Object_key = m._Marker_key
-	    and m._Marker_Status_key in (1,3)
+	    and m._Marker_Status_key = 1
 	    and m._Organism_key = 1''', 'auto')
 
     for r in results:
