@@ -140,7 +140,7 @@ def init():
 	and a._LogicalDB_key = 55
 	and a.preferred = 1
 	and a._Object_key = m._Marker_key
-	and m._Marker_Status_key in (1,3)
+	and m._Marker_Status_key = 1
 	and m._Organism_key = 2''', 'auto')
     #
     # create Human egID to marker lookup from database
@@ -157,7 +157,7 @@ def init():
 	    and a._LogicalDB_key = 1
 	    and a.prefixPart = 'MGI:'
 	    and a._Object_key = m._Marker_key
-	    and m._Marker_Status_key in (1,3)
+	    and m._Marker_Status_key = 1
 	    and m._Organism_key = 1''', 'auto')
 
     # removed per Richard
