@@ -190,7 +190,7 @@ def init():
 	and a._LogicalDB_key = 55
 	and a.preferred = 1
 	and a._Object_key = m._Marker_key
-	and m._Marker_Status_key in (1,3)
+	and m._Marker_Status_key = 1
 	and m._Organism_key = 95''', 'auto')
     #
     # create Xenopus egID to marker lookup from database
@@ -206,7 +206,7 @@ def init():
 	    where a._MGIType_key = 2
 	    and a._LogicalDB_key = 55
 	    and a._Object_key = m._Marker_key
-	    and m._Marker_Status_key in (1,3)
+	    and m._Marker_Status_key = 1
 	    and m._Organism_key = 1''', 'auto')
 
     # removed per Richard
